correçoes no loop com real, e no read